fix: Dialog in center on Safari

--- a/mcorg.backends/webapp/src/main/resources/static/styles/main.css
+++ b/mcorg.backends/webapp/src/main/resources/static/styles/main.css
@@ -42,6 +42,7 @@ body * {
 dialog {
     align-self: center;
     justify-self: center;
+    margin: auto;
 }
 
 /******** MAIN ********/
